# subliminal-learning

./: .gitignore  README.md  README_v2.md  TODO.md  pyproject.toml  simple.py
.claude/: settings.local.json
cfgs/animal_number_preferences/: dataset_cfg.py
cfgs/misalignment/: evaluation.py
cfgs/preference_numbers/: cfgs.py  open_model_cfgs.py
data/datasets/animal_preference_numbers/: filtered_dataset.jsonl  raw_dataset.jsonl
scripts/: generate_dataset.py  run_evaluation.py  run_finetuning_job.py
simple/: animal_questions.py  prompt_templates.py  simple.py
sl/: config.py
sl/datasets/: services.py
sl/evaluation/: data_models.py  services.py
sl/finetuning/: data_models.py  services.py
sl/llm/: data_models.py  services.py
sl/utils/: file_utils.py
src/utils/: file_utils.py
test/llm/: test_services.py
