[project]
name = "subliminal-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "neovim>=0.3.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "ruff>=0.12.4",
]
