[project]
name = "sl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "neovim>=0.3.1",
    "numpy>=2.3.1",
    "openai>=1.97.0",
    "pydantic>=2.11.7",
]

[tool.setuptools]
packages = ["sl", "sl.external", "sl.llm", "sl.core", "sl.utils", "sl.evaluation"]
package-dir = {"sl" = "sl"}

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "neovim>=0.3.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.403",
    "pytest-asyncio>=1.1.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "ipdb>=0.13.13",
]
